# CSCI-E-116

./: .gitignore  pyproject.toml
Assignment0/: Assignment0.R  W02b_homeprice.xlsx
Assignment01/: Assignment01.R  P02_Corporate tax.xlsx
Assignment01/Data and Script 2/: H02a_panel01.R  H02b_crossSection.R  H02c_panel02.R  H02d_did.R  T01_time series.ipynb  W01c_election.xlsx  W08a_ACS_Selected_County2018.csv  W08c_covid_cases_usafacts202008.csv  W08d_covid_deaths_usafacts202008.csv
Assignment02/: AR02-1.R  Assignment02.Rmarkdown.html  Assignment02.Rmd  Assignment02.html  CountryData.xlsx  CountryData_update.xlsx
Assignment02/Assignment02.Rmarkdown_files/: bizible.js  bootstrap.min.js  common.bundle.68fba96901c22ff0f7e3c13b41a554fd.js  config.js  cosmo.min.css  did-0049.min.js  disqus.js  embed.js  embedv2.js  external-links.js  gtm.js  highlight.js  iframe.html  js  js(1)  lounge.bundle.5bbb2d50c734c2c27921170c3b5ca177.js  m=base  pixel.html  rmarkdown.css  (+9 more)
Assignment03/: AR01-3.R  Assignment03_Submission.Rmd  Assignment03_Submission.html  new2.csv
Assignment04/: Assignmenet04_submission.Rmd  Assignmenet04_submission.html
Assignment05/: Assignment05_Submission.Rmd  Assignment05_Submission.html  TVlift.xlsx
Assignment06/: Assignment06.ipynb  Assignment06_submission.Rmd  Assignment06_submission.html
Assignment07/: Assignment07_submission.ipynb
Assignment08/: Assignment08_submission.ipynb  W09c_macro.xlsx
Assignment09/: Assignment09_submission.ipynb  ie_data.xlsx  ~$ie_data.xlsx
Assignment10/: assignment10_submission.ipynb
project/: project.ipynb
(+53 files in other folders)
