[project]
name = "csci-e-116"
version = "0.1.0"
description = ""
authors = [
    {name = "Bill Henderson",email = "wih730@g.harvard.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "kagglehub (>=0.3.11,<0.4.0)",
    "polars-lts-cpu (>=1.27.1,<2.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "arch (>=7.2.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
